# client-server-multiplayer-playground

./: Cargo.toml  README.md
client/: Cargo.toml
client/src/: camera.rs  debug_ui.rs  lib.rs  main.rs  systems.rs
server/: Cargo.toml
server/src/: interest_manager.rs  lib.rs  main.rs
shared/: Cargo.toml
shared/src/: actions.rs  inventory.rs  items.rs  lib.rs  messages.rs  netcode.rs  pathfinding.rs  skills.rs  tile_system.rs  trees.rs
