[workspace]
resolver = "2"
members = [
    "shared",
    "server",
    "client",
]

[workspace.dependencies]
bevy = "0.14"
bevy_renet = { version = "0.0.12", features = ["transport"] }
renet = { version = "0.0.15", features = ["transport"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }