[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared" }
bevy = { workspace = true }
bevy_renet = { workspace = true, features = ["transport"] }
renet = { workspace = true, features = ["transport"] }
serde = { workspace = true }
bincode = { workspace = true }